--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Lecture 2 Demo 1</string>
     <string name="action_settings">Settings</string>
-    <string name="myNewString"></string>
+    <string name="myNewString">my button</string>
+    <string name="title_activity_read_msg">ReadMSG</string>
 </resources>
